--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": "https://theastrogoth.github.io/Kerbal-Transfer-Illustrator",
   "name": "kerbal-transfer-illustrator",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-plotly.js": "^2.5.0",
+    "jotai": "^1.7.0",
     "plotly.js": "^2.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
