--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.5.0",
+    "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.2.8",
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
